# blazerag

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  agent.md  apply-fixes.ps1  docker-compose.yml
.github/workflows/: ci.yml
benches/: benchmark.rs
docs/: architecture.md
examples/: basic_usage.rs  bench.rs  langchain_server.py
src/: dashboard.rs  lib.rs  main.rs
src/chunker/: mod.rs
src/dashboard/: index.html
src/embedder/: http.rs  mod.rs  onnx.rs
src/ingestor/: mod.rs
src/llm/: mod.rs
src/reranker/: mod.rs
src/retriever/: mod.rs
src/security/: mod.rs
src/server/: mod.rs
